# strale-cpu

./: .gitignore  Cargo.toml  README.md  bunny.mtl  test.txt
src/: aabb.rs  axis.rs  bvh.rs  bvh2.rs  camera.rs  geometry.rs  hittable.rs  main.rs  material.rs  perlin.rs  ray.rs  scene.rs  tests.rs  texture.rs  util.rs  vec3.rs
src/bvh/: mod.rs  naive.rs  sah.rs
src/texture/: color.rs  image.rs  mod.rs
