[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
glam = "0.21.3"
image = "0.24.4"
indicatif = "0.17.0"
png = "0.17"
rand = {version="0.8.5", features=["small_rng"]}
rand_seeder = "0.2.3"
rayon = "1.5"
tobj = "3.2.3"

[features]
bench = []

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.bench]
lto = true
codegen-units = 1
